--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,10 @@ android {
         }
     }
     sourceSets { main { java.srcDirs = ['src/main/java', 'src/test/java/'] } }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
