ActivityUnitTestCase added. Seeded bug fixed.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,13 +10,13 @@ android {
     }
 
 
-    compileSdkVersion 22 // 22
+    compileSdkVersion 22
     buildToolsVersion "22.0.1"
 
     defaultConfig {
         applicationId "hk.ust.cse.hunkim.questionroom"
         minSdkVersion 18
-        targetSdkVersion 22 // 22
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
